--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>Vite + React + TS</title>
+    <!-- iOS Safari 키보드 최적화 -->
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <title>먼지치우기</title>
   </head>
   <body>
     <div id="root"></div>
